* Packages now depend on Java and subversion
* Package now includes dashboard and cc-config
* Now includes working connectfour sample
* Stops CruiseControl on uninstall
* Now only builds CruiseControl if needed
* .svn folder in connectfour.zip now points to correct sourceforge repository url(http://cruisecontrol.svn.sourceforge.net/svnroot/cruisecontrol/trunk/connectfour)

Documentation
======================
* Added docs for the Darcs scm plugin (CC-626).
* Fixed issue with logo appearing incorrectly placed in IE6. Patch by Jerome Lacoste.
* Add missing step in X10 publisher instructions. Patch by Bill Wohler.

dashboard
======================
NOTE: The dashboard has known display issues in Internet Explorer 6.
* Allowed artifacts to be kept in an arbitrary locations.
* Allowed config.xml to be kept in an arbitrary location
* Can render html/xml/txt in the browser.
* Can display the unit test output for passed builds.
* Enhanced the dashboard to display artifacts directories as tree structure.
* Added the cc-config (http://cc-config.sourceforge.net/) application so that it can be included in the dashboard (CC-658). Patch by Allan Wick.
* Allowed artifacts to be shown and downloaded in case of a failed build
* Allowed project name to contain hyphen (-)
* Allowed integration with project management tools
* Allowed using dashboard-config.xml to configure the dashboard
* Deprecated the way to configure the dashboard via web.xml
* Modificationset and Bootstrapping are no longer considered as building status in summary section.
* fixed unresolved velocity variable $build.build.duration in build detail page.
* Applied the patch of CC-436 which committed by Szczepan Faber
* Added error details in the dashboard (CC-665).
* Dashboard can now parse logfiles with testsuite elements without time attribute (CC-670). Patch by Ilkka Laukkanen.
* Dashboard can now parse logfiles with non-default date formats (CC-671). Patch by Ilkka Laukkanen.