@@ -190,8 +190,8 @@ public final class Main implements CruiseControlMain {
         System.out.println("  -xslpath directory     location of jmx xsl files; default files in package");
         System.out.println("");
         System.out.println("Options when using embedded Jetty");
-        System.out.println("  -webport [number]       port for the Reporting website; default 8080, delete");
-        System.out.println("                          this propery will make cruisecontrol start without reporting");
+        System.out.println("  -webport [number]       port for the Reporting website; default 8080, removing");
+        System.out.println("                          this propery will make cruisecontrol start without Jetty");
         System.out.println("  -webapppath directory   location of the exploded WAR file for the legacy reporting");
         System.out.println("                          application. default ./webapps/cruisecontrol");
         System.out.println("  -dashboard directory    location of the exploded WAR file for the dashboard");
